client/src/components/ui/SingleDeckWrapper.module.css
.singleDeck {
    padding-bottom: 10rem;
}

/* @media screen and (min-width: 1024px) {
    .singleDeck {
        margin-left: 5.5rem;
    }
}

@media screen and (min-width: 1250px) {
    .singleDeck {
        margin-left: 8rem;
    }
}

@media screen and (min-width: 1400px) {
    .singleDeck {
        margin-left: 17rem;
    }
} */

